[package]
name = "csv_converter"
version = "0.1.0"
authors = ["dgarrets <dgarrets@trinity.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
